@@ -1,0 +1,26 @@
+<?php
+
+
+// must be a number registered with Twilio
+$twilioFromNumber = "+1530756555";
+
+$twilioToNumber = "+15307565555";
+
+$twilioAcountID = "replace_me";
+
+$twilioAuthToken = "replace_me";
+
+$curlPath = "/usr/bin/curl";
+
+
+$urlToCheck = "http://thecastledoctrine.net/gameServer/server.php";
+
+
+$expectedResponse = "Castle Doctrine Server database setup and ready";
+
+$downMessage =
+"The Castle Doctrine game server is down.";
+
+
+
+?>
